# contact-list-clean-arch

./: .gitignore  README.md  pyproject.toml
contact_list_clean_arch/: __init__.py  main.py
contact_list_clean_arch/app/: __init__.py  main.py
contact_list_clean_arch/app/auth/gateway/: authorization_token_gateway.py  cryptography_gateway.py
contact_list_clean_arch/app/auth/middleware/: authorization_meddleware.py
contact_list_clean_arch/app/config/: exception_handler.py
contact_list_clean_arch/config/: exception_handler.py
contact_list_clean_arch/config/bean/: __init__.py
contact_list_clean_arch/config/db/: __init__.py  contact_schema.py  db_config.py
contact_list_clean_arch/contact/gateway/: contact_command_gateway.py  contact_query_gateway.py
contact_list_clean_arch/contact/model/: contact.py
contact_list_clean_arch/contact/router/: create_contact_router.py  get_contact_by_id_router.py
contact_list_clean_arch/contact/use_case/: create_contact_use_case.py  get_contact_by_id_use_case.py
contact_list_clean_arch/tests/: __init__.py  test_contact_list_clean_arch.py
contact_list_clean_arch/tests/config/: integration_test_case.py
contact_list_clean_arch/tests/util/: constants.py  mock_path.py  teste_factory.py
tests/: __init__.py  test.db  test_contact_list_clean_arch.py
tests/config/db/: db_test_config.py
tests/contact/router/: test_create_contact_router.py  test_get_contact_by_id_router.py
tests/contact/usecase/: test_create_contact_use_case.py  test_get_contact_by_id_use_case.py
tests/util/: mock_path.py
(+113 files in other folders)
