[tool.poetry]
name = "contact_list_clean_arch"
version = "0.1.0"
description = ""
authors = ["Luan Santos <luan.pereira@mercadolivre.com>"]

[tool.poetry.scripts]
start = "contact_list_clean_arch.app.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.37"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
